Estructura y llamada get de usuarios finalizada
Falta el post con el insert. Además se añaden los preparativos para los test
